--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav {
     display: flex;
     flex-direction: column;
     -ms-flex-direction: column;
-    border-right: 1px solid black;
+    border-right: 1px solid #000000;
     position: fixed;
     top: 0px;
     left: 0px;
@@ -64,8 +64,8 @@ nav div a {
     padding-bottom: 14px;
     font-size: 16px;
     text-decoration: none;
-    color: black;
-    border-top: 1px solid black;
+    color: #000000;
+    border-top: 1px solid #000000;
 }
 
 nav div a:hover {
@@ -111,7 +111,7 @@ main section code {
     background-color: #f7f7f7;
 }
 
-@media only screen and (max-width: 840px) {
+@media only screen and (max-width: 850px) {
     nav {
         width: 100%;
         height: auto;
@@ -119,7 +119,7 @@ main section code {
         -ms-flex-direction: column;
         text-align: center;
         position: static;
-        border-left: 1px solid black;
+        border-left: 1px solid #000000;
     }
 
     nav div {
@@ -141,9 +141,9 @@ main section code {
     }
 }
 
-@media only screen and (max-width: 420px) {
+@media only screen and (max-width: 450px) {
     nav {
-        border-left: 1px solid black;
+        border-left: 1px solid #000000;
     }
     main section {
         padding: 0px 16px;
