--- a/style.css
+++ b/style.css
@@ -142,6 +142,8 @@ main section code {
         width: 90%;
         margin-left: 50px;
         padding: 16px;
+        word-wrap: break-word;
+        -ms-word-wrap: break-word;
     }
 }
 
@@ -158,9 +160,15 @@ main section code {
         padding: 0px 16px;
     }
 
+    main section ul {
+        margin-left: 56px;
+    }
+
     main section code {
         width: 90%;
         margin-left: 16px;
         padding: 16px;
+        word-wrap: break-word;
+        -ms-word-wrap: break-word;
     }
 }
